# verilog-systemc-learning

./: .gitignore  CMakeLists.txt  README  README.md  bus.sv  cache.sv  cache.v  sc_main.cpp  set.sv  set.vh  shell.nix
2.10-multiplexer/: multiplexer.v  sc_main.cpp
5.12-flipflop/: flipflop.v  sc_main.cc
cache-line/: .gitignore  CMakeLists.txt  cache.v  cacheline.v  sc_main.cpp
